// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gifGrid component after useFetchGifs 1`] = `
<Fragment>
  <h2
    className="title-category"
  >
    One Punch
  </h2>
  <h3
    className="animate__animated animate__flash"
  >
    Loading...
  </h3>
  <div
    className="card-grid"
  >
    <Gif
      key="ABC"
      title="any"
      url="https://localhost/anything/any.jpg"
    />
  </div>
</Fragment>
`;

exports[`gifGrid component render component 1`] = `
<Fragment>
  <h2
    className="title-category"
  >
    One Punch
  </h2>
  <h3
    className="animate__animated animate__flash"
  >
    Loading...
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;
